@@ -1,6 +1,7 @@
 etc/pam.d
 usr/bin
 usr/lib/*/compiz/libunity*.so
+usr/lib/*/unity/unity-active-plugins-safety-check
 usr/share/man/*/unity.1
 usr/share/compiz
 usr/share/locale
